# gammaboard

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  docker-compose.yml  flake.nix  itphlies_performance_report.md  justfile  package-lock.json  ubelix.md
configs/: default.toml  gammaboard.toml  gammaloop-triangle.toml  live-test-baseline-sin-scalar.toml  live-test-havana-sinc-complex.toml  live-test-invalid-sin-complex.toml  live-test-invalid-sinc-scalar.toml  live-test-symbolica-unit-square-polynomial-scalar.toml  live-test-unit-naive-scalar.toml  live-test.toml  server.toml  symbolica-live-test-sin.toml  symbolica-live-test.toml
configs/cli/: default.toml
configs/deploy/: itphlies.toml  local.toml
configs/nginx/: itphlies-tunnel.conf  local-prod.conf
configs/runs/: default.toml  gammaloop-triangle.toml  live-test-unit-naive-scalar.toml  symbolica-live-test-sin.toml  symbolica-live-test.toml  tth.toml
configs/runtime/: default.toml
configs/server/: default.toml  itphlies-prod.toml  itphlies.toml  local-prod.toml  local.toml
configs/tasks/: sample_havana_complex.toml  triangle_train_sample_plot_resume.toml
configs/templates/runs/: gammaloop-triangle-scan.toml  gammaloop_triangle.toml  symbolica.toml  unit-idle.toml  unit-sample-scalar.toml  unit.toml
configs/templates/tasks/: complex_image_plot.toml  complex_line_plot.toml  configure-scalar.toml  image-complex.toml  pause.toml  plot-line-complex.toml  sample-scalar.toml  sample_havana_complex.toml  sample_monte_carlo_real.toml  triangle_train_sample_plot_resume.toml
dashboard/: README.md  package-lock.json  package.json
dashboard/backend/: index.js
dashboard/frontend/src/: App.js
dashboard/public/: index.html
dashboard/src/: App.css  App.js  App.test.js  README.md  index.css  index.js  setupTests.js
dashboard/src/auth/: AuthProvider.jsx
dashboard/src/components/: AggregatedBatchesPanel.jsx  ConnectionStatus.jsx  EvaluatorPanel.jsx  HistoryRangeControls.jsx  JsonFallback.jsx  LatexFormula.jsx  LogsWorkspace.jsx  ObservablePanel.jsx  PerformanceWorkspace.jsx  RunInfo.jsx  RunSelector.jsx  SampleChart.jsx  SamplerAggregatorPanel.jsx  SelectedTaskTomlPanel.jsx  TaskOutputPanel.jsx  TaskQueuePanel.jsx  WorkQueueStats.jsx  WorkerDetailsPanel.jsx  WorkerLogsPanel.jsx  WorkerStatusPanel.jsx  WorkersPanel.jsx  WorkersWorkspace.jsx
dashboard/src/context/: RunHistoryContext.jsx
dashboard/src/hooks/: useNodePanels.js  usePanelSource.js  usePolledResource.js  usePolling.js  useRunConfigPanels.js  useRunData.js  useRunPanels.js  useRunPerformancePanels.js  useRunPerformanceSummary.js  useRunTasks.js  useRuns.js  useSamplerRuntimeSummary.js  useTaskOutput.js  useWorkerLogs.js  useWorkerPerformanceHistory.js  useWorkersData.js
dashboard/src/services/: api.js
dashboard/src/utils/: collections.js  config.js  formatters.js  logs.js  runs.js  sampleParser.js  target.js  tasks.js
dashboard/src/viewmodels/: observable.js  observable.test.js
migrations/: 20250213120000_runs.sql  20250213120001_batches.sql  20250213120002_results.sql  20250213120003_workers.sql  20260213105900_init.sql  20260217143000_control_plane.sql  20260220113000_remove_observable_implementation_from_integration_params.sql  20260220150000_logs.sql  20260220150000_worker_logs.sql  20260225130000_worker_run_performance.sql  20260316110000_run_tasks.sql  20260318153000_run_stage_snapshots.sql  20260326131500_task_and_snapshot_names.sql  20260326173000_read_api_cleanup.sql  20260331170000_sampler_queue_cursor.sql  20260331180000_persisted_observable_snapshots_ordering.sql  20260331190000_run_sampler_checkpoints.sql
src/: batch.rs  config.rs  lib.rs  main.rs  models.rs  queries.rs  telemetry.rs  tracing.rs
src/aggregator/: mod.rs
src/api/: db.rs  errors.rs  mod.rs  nodes.rs  runs.rs  stage.rs  templates.rs
src/cli/: auth.rs  auto_assign.rs  completion.rs  db.rs  deploy.rs  mod.rs  node.rs  run.rs  run_node.rs  server.rs  shared.rs
src/contracts/: errors.rs  mod.rs  models.rs  traits.rs
src/control_plane/: mod.rs
src/core/: batch.rs  errors.rs  latent_batch.rs  mod.rs  models.rs  run_spec.rs  tasks.rs  traits.rs
src/engines/: errors.rs  havana_sampler.rs  mod.rs  models.rs  scalar_observable.rs  shared.rs  test_only.rs  traits.rs
src/engines/evaluator/: gammaloop.rs  mod.rs  sin_evaluator.rs  sinc_evaluator.rs  symbolica.rs  test_only_sin.rs  test_only_sinc.rs  unit.rs
src/engines/observable/: complex.rs  mod.rs  scalar.rs
src/engines/parametrization/: identity.rs  mod.rs  none.rs  spherical.rs  unit_ball.rs
src/engines/sampler_aggregator/: havana.rs  mod.rs  naive_monte_carlo.rs  test_only_training.rs
src/evaluation/: batch.rs  mod.rs  traits.rs
src/evaluation/evaluator/: gammaloop.rs  mod.rs  sin_evaluator.rs  sinc_evaluator.rs  symbolica.rs  unit.rs
src/evaluation/observable/: complex.rs  full.rs  gammaloop.rs  mod.rs  scalar.rs
src/preprocess/: mod.rs  preflight.rs
src/runners/: evaluator.rs  mod.rs  node_runner.rs  process_memory.rs  queue.rs  rolling_metric.rs  sample_time_stats.rs  sampler_aggregator.rs  stage_context.rs  test_support.rs  worker.rs
src/runners/node_runner/: active_worker.rs  evaluator_role_runner.rs  mod.rs  reconcile.rs  role_runner.rs  sampler_aggregator_role_runner.rs
src/sampling/: havana_grid.rs  latent_batch.rs  mod.rs  sampler.rs
src/sampling/batch_transform/: mod.rs  spherical.rs  unit_ball.rs
src/sampling/materializer/: frozen_havana_inference.rs  identity.rs  mod.rs
src/sampling/parametrization/: frozen_havana_inference.rs  identity.rs  mod.rs  spherical.rs  unit_ball.rs
src/sampling/sampler_aggregator/: havana.rs  mod.rs  naive_monte_carlo.rs  raster.rs
src/server/: auth.rs  config_panels.rs  mod.rs  panels.rs  performance_panels.rs  run_panels.rs  task_panels.rs  worker_panels.rs
src/server/task_panels/: full_observable.rs  mod.rs  (+1 more)
src/stores/: bootstrap.rs  mod.rs  pg_store.rs  read_models.rs  run_control.rs  sql_queries.rs  traits.rs
src/utils/: domain.rs  mod.rs  rng.rs  serde_bigint.rs
tests/: full_stack_cli.rs  pg_store_integration.rs
(+35 files in other folders)
