[package]
name = "gammaboard"
version = "0.1.0"
edition = "2024"

[dependencies]
gammalooprs = { path = "../gammaloop/crates/gammalooprs", version = "0.3.3" }
gammaloop_api = { package = "gammaloop-api", path = "../gammaloop/crates/gammaloop-api", default-features = false, features = ["cli", "no_pyo3"] }
tokio = { version = "1.46", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "chrono", "macros"] }
dotenvy = "0.15"
rand = { package = "rand", version = "0.9" }
rand_xoshiro = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
futures-core = "0.3"
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
toml = "0.8"
async-trait = "0.1"
thiserror = "2.0"
symbolica = { version = "1.4", features = ["serde"] }
ndarray = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
strum = { version = "0.27", features = ["derive"] }
num = "0.4.3"
tempfile = "3"
anyhow = "1"
comfy-table = "7"

[profile.dev-optim]
inherits = "dev"
opt-level = 2

[lib]
name = "gammaboard"
crate-type = ["rlib"]


[patch.crates-io]
#graphica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
#idenso = { git = "https://github.com/alphal00p/spenso", rev = "c052f22dc98a18535e114eede758674befc2758f" }
#linnet = { git = "https://github.com/alphal00p/linnet", rev = "406272c24bcb5bde5551d7d29620459e0671c82e" }
#numerica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
#spenso = { git = "https://github.com/alphal00p/spenso", rev = "c052f22dc98a18535e114eede758674befc2758f" }
#spenso-hep-lib = { git = "https://github.com/alphal00p/spenso", rev = "c052f22dc98a18535e114eede758674befc2758f" }
#spenso-macros = { git = "https://github.com/alphal00p/spenso", rev = "c052f22dc98a18535e114eede758674befc2758f" }
#symbolica = { git = "https://github.com/benruijl/symbolica", branch = "dev" }
#vakint = { git = "https://github.com/alphal00p/vakint", rev = "bf91ee57aa62604c7ae3fb919203bf6f09544470" }
